---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\npub record Mine {\n  Mine(a: Int, b: Int)\n}\n\npub const labels = Mine(b: 2, a: 1)\npub const no_labels = Mine(3, 4)\n"
---
----- SOURCE CODE

pub record Mine {
  Mine(a: Int, b: Int)
}

pub const labels = Mine(b: 2, a: 1)
pub const no_labels = Mine(3, 4)


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../rakun.d.mts";

export class Mine extends _.CustomType {
  constructor(a: number, b: number);
  
  a: number;
  b: number;
}

export type Mine$ = Mine;

export const labels: Mine$;

export const no_labels: Mine$;
